--- a/gb/21/12/24/n13457990.md
+++ b/gb/21/12/24/n13457990.md
@@ -1,15 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nlnxij395/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nlnxij395/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nlnxij395/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nlnxij395/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nlnxij395/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nlnxij395/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nlnxij395/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】中共渗透很危险 美国大学需警惕</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13457994-bacow-and-xinping-1200x800-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/1812311049261528-600x400.jpg" />
 <h6>2019年3月20日，中国领导人习近平在北京人民大会堂与哈佛大学校长劳伦斯?巴科（Lawrence Bacow）和夫人阿黛尔?弗利特?巴科（Adele Fleet Bacow）会谈。(Andrea Verdelli/Pool/Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2021年12月25日讯】（大纪元专栏作家John Mac Ghlionn撰文／曲志卓编译）中国共产党正忙于发展高科技武器装备。到本世纪末，中共将拥有能够造成大规模混乱的“破坏性”军事技术。</p>
 <p>换句话说，中共正在发展“将改变战争特征”的武器。这就引出了一个问题：为什么美国的大学要帮助中共提高其军事实力？</p>
-<p>根据保卫民主基金会（the Foundation for Defense of Democracies）智库的一份新报告，一些<ahref="https://github.com/nlnxij395/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E5%AD%A6.md#1">美国大学</a>与中国各大学紧密相连，而这些大学都与解放军有密切的关系。该报告警告说，这些中国大学大量参与了解放军的军事建设，包括其核武器计划，而且该计划还在迅速扩张。</p>
-<p>当<ahref="https://github.com/nlnxij395/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E5%AD%A6.md#1">美国大学</a>与中共支持的企业合作时，谁会受益？一个词：中共。</p>
+<p><strong>听文章：</strong></p>
+<div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" src="https://player.captivate.fm/episode/00a50dce-aee5-4eeb-b297-575c9b150cb3" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>根据保卫民主基金会（the Foundation for Defense of Democracies）智库的一份新报告，一些<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E5%AD%A6.md#1">美国大学</a>与中国各大学紧密相连，而这些大学都与解放军有密切的关系。该报告警告说，这些中国大学大量参与了解放军的军事建设，包括其核武器计划，而且该计划还在迅速扩张。</p>
+<p>当<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E5%AD%A6.md#1">美国大学</a>与中共支持的企业合作时，谁会受益？一个词：中共。</p>
 <p>正如报告所指出的那样，这些伙伴关系加强了“中国（共）更广泛的军工综合体，包括其核计划、网络间谍平台和其它敏感武器研究”。</p>
 <p>这令人深感担忧。直到最近，美国还是技术和武器研究的主导者。然而，情况已经发生了变化，中共现在是方兴未艾的力量。</p>
 <p>根据美国国防情报局（Defense Intelligence Agency）的一份<ahref="https://www.wionews.com/world/china-already-leads-the-world-in-some-military-technology-pentagon-report-190597">非机密报告</a>，尽管中国大学多年来有了显&#33879;的进步，但中共仍然依赖“不择手段获取技术”。</p>
@@ -32,47 +35,47 @@
 <p><em>约翰?麦克格里昂（John Mac Ghlionn）是一位研究员和散文家。他的作品发表在《纽约邮报》（New York Post）、《悉尼先驱晨报》（Sydney Morning Herald）、《美国保守党人》（The American Conservative）、《国家评论》（National Review）、《公共话语》（The Public Discourse）等知名媒体。他还是《硬币电报》（Cointelegraph）的专栏作家。他的推特是：@ghlionn</em></p>
 <p><em>原文“<ahref="https://www.theepochtimes.com/chinas-influence-over-us-universities-poses-existential-risks_4164700.md#1">China’s Influence Over US Universities Poses Existential Risks</a>”刊于英文《大纪元时报》</em></p>
 <p><em>本文仅代表作者本人的观点，不一定反映《大纪元时报》的立场。</em></p>
-<p>责任编辑：高静#</p>
+<p>责任编辑：高静#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/20/9/20/n12417372.md#1">【名家专栏】分不清中共和中国人的雪城大学</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/10/23/n13324491.md#1">【名家专栏】中共渗透西方精英学校 威胁民主</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/11/23/n13392322.md#1">【名家专栏】切断金钱渠道 阻挡中共渗透</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/13/n13434593.md#1">【名家专栏】中共渗透非洲的媒体宣传战</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/20/n12417372.md#1">【名家专栏】分不清中共和中国人的雪城大学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/23/n13324491.md#1">【名家专栏】中共渗透西方精英学校 威胁民主</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/23/n13392322.md#1">【名家专栏】切断金钱渠道 阻挡中共渗透</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/13/n13434593.md#1">【名家专栏】中共渗透非洲的媒体宣传战</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839893.md#1" target="_blank">郭婉莹——被遗忘的“上海公主”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/16/n10223963.md#1" target="_blank">“西单民主墙”前后的邓小平</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/17/n13443991.md#1">【未解之谜】颠覆认知的物理实验</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/15/n13439826.md#1">【曾国藩·乱世自警】与众不同的财富观</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/13/n13435096.md#1">万事皆有定数 民间神算者为世人指点迷津</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/23/n13456128.md#1">【新闻看点】习近平设宴话别 林郑失宠将卸任？</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/24/n13458471.md#1">【军事热点】MQ-25无人空中加油机登上航母</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/24/n13457861.md#1">【新闻大家谈】李田田家人“辟谣” 越辟越谣？</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/22/n13453718.md#1">张学友在家唱歌被邻居投诉 原因曝光笑翻网友</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/23/n13455883.md#1">“佟丽娅再婚”遭全网封杀 涉中宣部副部长？</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/23/n13455270.md#1">江苏地震后 上海天空惊现壮观“云墙”</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/22/n13453718.md#1">张学友在家唱歌被邻居投诉 原因曝光笑翻网友</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/22/n13453856.md#1">黄安爆料汪峰夫妇离婚 遭章子怡严正喊提告</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/23/n13456179.md#1">为何嫁给李荣浩？杨丞琳公开对方最大优点</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/22/n13454081.md#1">被消失近4个月 赵薇突然现身香港</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/24/n13458541.md#1">范冰冰晒游泳照 歪头自拍显俏皮</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/23/n13454499.md#1">印度新生儿遭遗弃 母狗带一窝小狗守护她</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/22/n13453532.md#1">Omicron攻入四省 专家：将是中国最大威胁</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/20/n13448908.md#1">过了更年期一直胖？营养师：这样吃蔬菜才能瘦</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/23/n13455603.md#1">水果吃太多很伤身 当心胃水肿</a></li>
-<li><a href="https://github.com/nlnxij395/djy/blob/master/gb/21/12/16/n13441854.md#1">财运要变好 家里这个位置一定要亮起来</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nlnxij395/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nlnxij395/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/24/n13457990.htm">【名家专栏】中共渗透很危险 美国大学需警惕</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/24/n13457990.htm">【名家专栏】中共渗透很危险 美国大学需警惕</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nlnxij395/djy/blob/master/gb/21/12/24/n13457990.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nlnxij395/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nlnxij395/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nlnxij395/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nlnxij395/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlnxij395/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/12/24/n13457990.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
